Created new applications

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,6 +21,8 @@
     <link rel="shortcut icon" href="favicon.png" />
   </head>
   <body>
-    <div id="app-root-2023-wcp"></div>
+    <div class="app-root-2023-wcp" id="app-root-2023-wcp"></div>
+    <div class="app-root-2023-wcp" id="app-root-2023-wcp_ecommerce"></div>
+    <div class="app-root-2023-wcp" id="app-root-2023-wcp_productsafety"></div>
   </body>
 </html>
