--- a/public/index.html
+++ b/public/index.html
@@ -2,4 +2,4 @@
       body {
         margin: 0;
         padding: 0;
-      }</style><link href="font/fonts.css" rel="stylesheet"><link rel="shortcut icon" href="favicon.png"/><script defer="defer" src="js/2023-wcp.min.js"></script><link href="css/2023-wcp.min.css" rel="stylesheet"></head><body><div id="app-root-2023-wcp"></div></body></html>
+      }</style><link href="font/fonts.css" rel="stylesheet"><link rel="shortcut icon" href="favicon.png"/><script defer="defer" src="js/2023-wcp.min.js"></script><link href="css/2023-wcp.min.css" rel="stylesheet"></head><body><div class="app-root-2023-wcp" id="app-root-2023-wcp"></div><div class="app-root-2023-wcp" id="app-root-2023-wcp_ecommerce"></div><div class="app-root-2023-wcp" id="app-root-2023-wcp_productsafety"></div></body></html>
